# resvg-go

./: Cargo.toml  README.md  font_database.go  fontdb.go  fontdb_database.go  go.mod  option.go  options.go  pixmap.go  resvg.go  resvg_test.go  rust_byte.go  size.go  tiny_skia_pixmap.go  tiny_skia_transform.go  transform.go  tree.go  usvg_fit_to.go  usvg_options.go  usvg_screen_size.go  usvg_size.go  usvg_tree.go  worker.go
internal/: Cargo.toml  resvg.go  resvg.rs
src/: fontdb_database.rs  gen.go  lib.rs  rust_bytes.rs  tiny_skia_transform.rs  usvg_fit_to.rs  usvg_options.rs  usvg_pixmap.rs  usvg_screen_size.rs  usvg_size.rs  usvg_tree.rs
wasm/: gen.go  resvg.rs
