[package]
name = "resvg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "wasm/resvg.rs"

[dependencies]
resvg = { version = "0.28", default-features = false, features = [ "text" ] }
usvg = { version = "0.28", default-features = false }
usvg-text-layout = { version = "0.28", default-features = false }
tiny-skia = "0.8"
fontdb = { version = "0.10.0", default-features = false, features = [ "fs" ] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
opt-level = 'z'
strip = true